--- a/fellowship-adventures.html
+++ b/fellowship-adventures.html
@@ -127,7 +127,7 @@
             document.getElementById("home").innerHTML += " "+langUI("Home");
             document.getElementById("all_buildings").innerHTML = `<img src="https://i.ibb.co/NC00fM1/all-buildings.png" style="width: 24px; margin-bottom: 4px;"> ${langUI("All Buildings")}`;
             document.getElementById("all_events").innerHTML = `<img src="https://i.ibb.co/QkJ7qzP/all-events.png" style="width: 27px; margin-bottom: 1px;"> ${langUI("All Events")}`;
-            document.getElementById("navbar_more").innerHTML = `<img src="images/general/new_sign.png" style="width: 50px;"> ${langUI("More")}`;
+            document.getElementById("navbar_more").innerHTML = `${langUI("More")}`;
             document.getElementById("navbar_guestraces").innerHTML = `<img src="https://i.ibb.co/d40mvg2/all-guestraces.png" style="width: 25px; margin-bottom: 4px;"> ${langUI("All Guest Races")}`;
 
             generateGuestRacesDropdown();
