--- a/eventTabs/october_xxii_/tools.html
+++ b/eventTabs/october_xxii_/tools.html
@@ -7,7 +7,9 @@
 
      <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
         
-        The Mischievous Therapy event introduces a ga
+        The Mischievous Therapy event introduces a game mechanic that is completely unique in Elvenar! The Misty Forest has appeared
+        right next to your city and now it's up to you to clear the fog, find your path and collect all the hidden spirits
+        and mysterious rewards that the Halloween event has to offer!<br>
 
         <div class="bbTable">
             <table class="table-primary" style="width: 100%; margin-top: 20px; margin-bottom: 20px;">
@@ -23,24 +25,40 @@
                     <td style="text-align: center;"><img src="https://i.ibb.co/SsMX9D0/tool-adjacent-xl.png"></td>
                 </tr>
                 <tr>
-                    <td style="text-align: center;">text</td>
-                    <td style="text-align: center;">text</td>
-                    <td style="text-align: center;">text</td>
+                    <td style="text-align: center;">Clears the fog from one <b>single</b> tile. Can only be used on tiles covered by fog.</td>
+                    <td style="text-align: center;">Clears the fog from a <b>column</b> of fog tiles. Blocked by obstacles. Can only be used on cleared empty tiles.</td>
+                    <td style="text-align: center;">Clears the fog from all <b>adjacent</b> tiles. Can only be used on cleared empty tiles.</td>
                 </tr>
               </tbody>
             </table>
           </div>
 
-        We know that each cup can generate even better piece than level 1 (with a decreasing chance). In case the spawning process generates a better piece than the one 
-        needed in our task, it may seem like we have received a potentially useless piece for now (which could lead us to think that the worst-case scenario numbers
-        calculated in the <b>Pieces</b> tab may get even worse), but we will certainly find a use for this piece in one of the very following tasks and that will reduce
-        our costs markedly. So do not discard your high level pieces! Unless you are clicking the cups buttons too many times (and more than the number of level 1
-        pieces you need), you shouldn't get into excess of your pieces in the board!<br><br>
+        <center>Each tool has a different area to clear and it's up to you to use these as efficiently as possible, so that you get the most
+        out of your Magic Ingredients. You can check the
+        <b>Strategies</b> tab to read about well proven strategies of the Misty Forest.</center><br>
 
-        Considering the merging process from the <b>Pieces</b> tab and spawning process from the table above, we can visualize the whole gameplay mechanic.
-        Use the <b>Play</b> button to start the visualization and click the respective <b>Merge</b> nodes to merge your generated pieces (if you already have some, of course).
+        <center><img src="https://i.ibb.co/HYpkhBQ/EL-akcia-okt-ber-2022-event-window.png" style="width: 60%;"></center><br>
 
-        You can also use the <b>Step</b> button to have better control over the merging process.
+        In the left side of the event window you can see all your currently available tools. To buy more, you need to visit the
+        Magical Lights Shop (using the <b>+</b> button under the Flash Flask icon).<br><br>
+
+        <div class="row" style="margin-top: 20px; margin-bottom: 20px;">
+            <div class="col-sm-5">
+              <center><img src="https://i.ibb.co/KVv7842/EL-akcia-okt-ber-2022-biggest-pack.png" style="max-width: 100%;"></center><br>
+            </div>
+            <div class="col-sm-7">
+                I recommend you to always purchase the biggest pack for 420 Magic Ingredients. You will receive the biggest number of tools
+                per 1 ingredient spent.<br><br> Keep in mind that if you stick to the <b>Strategies</b>, the ratio of tools you use should be always
+                approximately the same as the ratio of tools that is provided in this pack.
+            </div>
+        </div>
+
+        If you want to see how I'm using my tools handle different situations in the forest, you can watch my gameplay video in which I show the timelapse of my Misty Forest
+        gameplay:<br><br>
+
+        <center>
+          <iframe allowfullscreen="true" src="https://www.youtube.com/embed/vgAHZXUEayk" style="width: 560px; height: 315.2px;"></iframe>
+        </center>
 
     </div>
     
