--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                             <a class="dropdown-item" href="#" onclick="setLanguage('cz')"><img src="images/general/lang_cz.png" style="margin-right: 3px; margin-left: 3px;">CZ</a>
                             <a class="dropdown-item" href="#" onclick="setLanguage('de')"><img src="images/general/lang_de.png" style="margin-right: 3px; margin-left: 3px;">DE</a>
                             <a class="dropdown-item" href="#" onclick="setLanguage('fr')"><img src="images/general/lang_fr.png" style="margin-right: 3px; margin-left: 3px;">FR</a>
+                            <a class="dropdown-item" href="#" onclick="setLanguage('hu')"><img src="images/general/lang_hu.png" style="margin-right: 3px; margin-left: 3px;">HU</a>
                             <a class="dropdown-item" href="#" onclick="setLanguage('pl')"><img src="images/general/lang_pl.png" style="margin-right: 3px; margin-left: 3px;">PL</a>
                             <a class="dropdown-item" href="#" onclick="setLanguage('ru')"><img src="images/general/lang_ru.png" style="margin-right: 3px; margin-left: 3px;">RU</a>
                         </div>
@@ -154,6 +155,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
+                <li><strong>New language is now supported!</strong> You can now select the HU language using the Globe button in the top right corner of the site (December 27th 2022)</li>
                 <li><strong>Winter Magic event arrived!</strong> All buildings from this event are now in the database (November 11th 2022)</li>
                 <li><strong>New round of Fellowship Adventures arrived on Beta!</strong> All details about this adventure are now available on the respective page under the More button (October 27th 2022)</li>
                 <li><strong>Mischievious Therapy event arrived!</strong> All buildings from this event are now in the database (September 29th 2022)</li>
