--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div
              id="column_with_news" class="col-md">
-                <li><strong>The Secrets of Alchemy event arrived!</strong> All buildings from this event are now in the database (January 5th 2023)</li>
+                <li><strong>The Secrets of Alchemy event arrived!</strong> All buildings from this event are now in the database (January 3rd 2023)</li>
                 <li><strong>New language is now supported!</strong> You can now select the HU language using the Globe button in the top right corner of the site (December 27th 2022)</li>
                 <li><strong>Winter Magic event arrived!</strong> All buildings from this event are now in the database (November 11th 2022)</li>
                 <li><strong>New round of Fellowship Adventures arrived on Beta!</strong> All details about this adventure are now available on the respective page under the More button (October 27th 2022)</li>
