--- a/eventTabs/february_xxiii_/tools.html
+++ b/eventTabs/february_xxiii_/tools.html
@@ -3,7 +3,7 @@
 <div id="main">
 
     <h5 id="header" class="card-title text-center text-title font-weight-bold" style="text-align: left;">..:: Tools ::..<br></h5>
-    <img id="event_banner" src="https://i.imgur.com/S0FScAJ.png" alt="undefined" class="center " style="margin-bottom: 15px;"><!--https://i.ibb.co/9hG7drr/february-xxiii-tools-guide-icon.png-->
+    <img id="event_banner" src="https://i.ibb.co/9hG7drr/february-xxiii-tools-guide-icon.png" alt="undefined" class="center " style="margin-bottom: 15px;">
 
     <div style="margin-left: 3%; margin-right: 3%; margin-bottom: 25px;">
        
@@ -20,9 +20,9 @@
                    <th style="width: 33%; text-align: center;">Vacuum Vial</th>
                </tr>
                <tr>
-                   <td style="text-align: center;"><img src="https://oxzz.innogamescdn.com/frontend//assets/tile_event_tool_single-04fb5114c81673e9bf9f8d4ddecc122f.png"></td>
-                   <td style="text-align: center;"><img src="https://oxzz.innogamescdn.com/frontend//assets/tile_event_tool_column-da602777d14454dd590078c7e662f642.png"></td>
-                   <td style="text-align: center;"><img src="https://oxzz.innogamescdn.com/frontend//assets/tile_event_tool_adjacent-151d0ead6f23dacb4388b24760c6dd1f.png"></td>
+                   <td style="text-align: center;"><img src="https://i.ibb.co/WHs6fSK/tool-single.png"></td>
+                   <td style="text-align: center;"><img src="https://i.ibb.co/Tgwm8K0/tool-column.png"></td>
+                   <td style="text-align: center;"><img src="https://i.ibb.co/7kqStDW/tool-adjacent.png"></td>
                </tr>
                <tr>
                    <td style="text-align: center;">Clears the dust from one <b>single</b> tile. Can only be used on tiles covered by dust.</td>
@@ -37,14 +37,14 @@
        out of your Provinsions. You can check the
        <b>Strategies</b> tab to read about well proven strategies of the Buried City.</center><br>
 
-       <center><img src="https://i.imgur.com/UTKBN3Y.png" style="width: 60%;"></center><br><!--https://i.ibb.co/XF1jHcY/february-xxiii-window.png-->
+       <center><img src="https://i.ibb.co/XF1jHcY/february-xxiii-window.png" style="width: 60%;"></center><br>
 
        In the left side of the event window you can see all your currently available tools. To buy more, you need to visit the
        Digging Tool Shop (using the <b>+</b> button under the Vacuum Vial icon).<br><br>
 
        <div class="row" style="margin-top: 20px; margin-bottom: 20px;">
            <div class="col-sm-5">
-             <center><img src="https://i.imgur.com/r6UxkS3.png" style="max-width: 100%;"></center><br><!--https://i.ibb.co/TK0V4fB/february-xxiii-toolshop.png-->
+             <center><img src="https://i.ibb.co/TK0V4fB/february-xxiii-toolshop.png" style="max-width: 100%;"></center><br>
            </div>
            <div class="col-sm-7">
                I recommend you to always purchase the packs of bundled tools (by turns). You will receive the biggest number of tools
